<resources>
    <string name="app_name">Capstone</string>
    <string name="overall_fragment_title">Overall</string>
    <string name="income_fragment_title">Income</string>
    <string name="expenses_fragment_title">Expenses</string>
    <string name="finances_current_headline">CURRENT</string>
    <string name="finances_expected_headline">EXPECTED</string>
    <string name="number_of_transactions">Number of transactions:</string>
    <string name="total_cost">Total expenseCost:</string>
    <string name="number_of_jobs">Number of jobs:</string>
    <string name="total_income">Total jobIncome:</string>
    <string name="spinner_category_default_value">Pick category from list</string>
    <string name="overall_income">Income -> </string>
    <string name="overall_expenses">Expenses -> </string>
    <string name="overall_profits">Profits -> </string>
    <string name="details_cardview_headline">DETAILS</string>
    <string name="insert_category_label">Select or enter new category</string>
    <string name="enter_new_category_hint">Enter new category</string>
    <string name="date_of_job_label">Date of job</string>
    <string name="enter_job_date_hint">Enter localDate</string>
    <string name="job_date_of_payment_label">Date of payment</string>
    <string name="enter_job_date_of_payment_label">Enter date of payment</string>
    <string name="job_income_label">Income</string>
    <string name="enter_income_hint">Enter income</string>
    <string name="more_information_label">More information</string>
    <string name="enter_information_hint">Enter information</string>
    <string name="expenses_cardview_headline">EXPENSES</string>
    <string name="add_expense_button">add expense</string>
    <string name="summary_cardview_headline">Summary</string>
    <string name="profit_label">Profit</string>
    <string name="income_label">Income</string>
    <string name="expenses_label">Expenses</string>
    <string name="no_jobs_at_this_date_yet_message">No jobs at this date yet...</string>

    <string-array name="period_selection_options">
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <!-- DELETE EXPENSE ALERT DIALOG -->
    <string name="alert_dialog_delete_title">Are you sure you want to delete?</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <!-- INCOME REPORT -->
    <string name="job_category_number_of_jobs">Number of jobs:</string>
    <string name="job_category_total_income">Total income:</string>
    <string name="job_category_total_profits">Total profits:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- PAYMENTS LIST -->
    <string name="payments_list_headline">Payments</string>
    <string name="payment_date">Payment date:</string>
    <string name="payment_cost">Cost:</string>
    <string name="payment_number">Payment number:</string>

    <!-- DRAWER -->
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- EXPENSES -->
    <string name="expense_edit_button_description">expense edit button</string>
    <string name="expense_delete_button_description">expense delete button</string>
    <string name="expense_list_active_expense">Active</string>
    <string name="expense_list_done_expense">Done</string>
    <string name="enter_new_category">Enter new category</string>
    <string name="pick_from_existing_category">Pick from existing category</string>
    <string name="update_expense_title">Update Expense</string>
    <string name="new_expense_title">New Expense</string>
    <string name="payments_list_payment">payment of:</string>
    <string name="payments_list_payment_date">payment date:</string>
    <string name="select_or_enter_new_category">Select or enter new category:</string>
    <string name="payments_details">Payments details:</string>
    <string name="expense_cost_hint">Expense cost</string>
    <string name="number_of_payments_hint">Number of payments</string>
    <string name="payment_date_hint">Payment date</string>
    <string name="expense_description_hint">Expense description</string>
    <string name="payments_details_missing">Payments details missing</string>
    <string name="expense_saved_toast">Expense saved successfully!</string>

    <!-- DIALOG -->
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="pick_category_title">Pick Category</string>
    <string name="enter_category_title">Enter category name</string>

    <!-- EXPENSES LIST -->
    <string name="expenses_list_title">Expenses</string>
    <string name="job_saved_toast_message">Job saved successfully!</string>
    <string name="current">CURRENT:</string>
    <string name="select_period_dialog_title">Select period</string>
    <string name="no_decription">No description</string>
    <string name="job_profit">Profit:</string>
    <string name="total_profits">Total profits:</string>
    <string name="profits">Profits</string>


</resources>
